--- a/init/init.nt.rc
+++ b/init/init.nt.rc
@@ -53,3 +53,10 @@ on post-fs-data
 
 on property:sys.boot_completed=1
     swapon_all /vendor/etc/fstab.zram
+    start sim-restart
+
+service sim-restart /system/bin/init.sim.restart.sh
+    user root
+    class main
+    oneshot
+    disabled
